bugfix: <html> was hidden on small screens

--- a/_dev/css/ui.css
+++ b/_dev/css/ui.css
@@ -1051,7 +1051,7 @@
 		padding:4px 0 0;
 	}
 
-	.debug {
+	.button.debug {
 		display:none !important;
 	}
 
